[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.11"

# We could use any path here, but we are following the community convention.
# We could specify a library name using the 'name' field. I f unspecified
# cargo will default to 'package.name', which is what we want.
[lib]
path = "src/lib.rs"

# Notice the double square brackets: It's an array in TOML's syntax
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later.
[[bin]]
path = "src/main.rs"
name = "zero2prod"
